--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://jukaco.github.io/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/TeamPlanner-react-redux/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="https://jukaco.github.io/assets/index.026676a9.js"></script>
-    <link rel="stylesheet" href="https://jukaco.github.io/assets/index.e7924bd8.css">
+    <script type="module" crossorigin src="/TeamPlanner-react-redux/assets/index.026676a9.js"></script>
+    <link rel="stylesheet" href="/TeamPlanner-react-redux/assets/index.e7924bd8.css">
   </head>
   <body>
     <div id="root"></div>
